# ExecutionNodes

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-ubuntu.sh  build.bat
.github/workflows/: cmake.yml  ubuntu.yml  windows.yml
docs/: CMakeLists.txt  mainpage.md
examples/: CMakeLists.txt  arithmetic.json  concept_1.json  concept_2.json  concept_3.json  example.cpp  example_arithmetic.cpp  img_proc.json
examples/example_arithmetic/: CMakeLists.txt  main.cpp
examples/example_image_processing/: CMakeLists.txt  main.cpp
examples/example_logic_gates/: CMakeLists.txt  main.cpp
include/execution_nodes/: connection.h  connector.h  execution_nodes.h  graph.h  graph_definition.h  helpers.h  logging.hpp  node.h  node_definition.h  node_registry.h  topological_sort.h
include/private/execution_nodes/internal/: connector.h  helpers.h  logging.hpp  topological_sort.h
include/public/execution_nodes/: connection.h  graph.h  graph_definition.h  node.h  node_definition.h  node_type_definition.h  port_type_definition.h
src/: CMakeLists.txt  connection.cpp  connector.cpp  execution_nodes.cpp  graph.cpp  graph_definition.cpp  helpers.cpp  logging.cpp  node.cpp  node_definition.cpp  node_registy.cpp  topological_sort.cpp
tests/: CMakeLists.txt  test_execution_nodes.cpp
